--- a/EasyDemo/EasyDemo.Android/Resources/layout/Login.axml
+++ b/EasyDemo/EasyDemo.Android/Resources/layout/Login.axml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtPassword" />
     <Button
-        android:text="Button"
+        android:text="Iniciar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnLogin" />
